<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button">

        <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:height="32dp"
            android:gravity="center"
            android:text="@string/author" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:height="32dp"
            android:gravity="center"
            android:text="@string/date" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/authors_list"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:maxHeight="550dp"
        android:minHeight="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/author_list_item" />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/refresh_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text" />

    <ProgressBar
        android:id="@+id/main_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>